--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "etag": "^1.8.1",
     "express": "^4.19.2",
     "mockjs": "^1.1.0",
     "mongoose": "^8.4.0"
