--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
     "cookie-parser": "^1.4.6",
     "etag": "^1.8.1",
     "express": "^4.19.2",
+    "jwt-simple": "^0.5.6",
     "mockjs": "^1.1.0",
     "mongoose": "^8.4.0"
-  }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.6",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6"
+  },
+  "babel": {"presets": ["@babel/env"]} 
 }
